# pub-prototyping

./: .gitignore  .gitmodules  README.md
bash/: testgetopt.sh  testprefix.sh
cmake/: CMakeLists.txt
cmake/test_addtarget/: CMakeLists.txt  file2.cpp  simple.cu
cmake/testextinc/: CMakeLists.txt  callchild.cpp  run.sh
cmake/testextinc/childproject/: CMakeLists.txt  child.cpp  child.h
cmake/testextinc/childproject/install2/lib/: childproject.cmake
cmake/testextinc/install/: run.sh
cmake/testextinc/install/lib/: childproject-noconfig.cmake
cmake/testextinc/scripts/: activate
cocl-cmake/: CMakeLists.txt
cocl-issue3/: cocl-issue3-a.cpp  cocl-issue3-c.cpp  cocl-issue3-d.cpp  cocl-issue3-e.cpp  cocl-issue3-f.cpp  cuda_sample_nomain.cu  g.cpp  h.cpp  runcoclissue3a.sh  rund.sh  rune.sh  runf.sh  rung.sh  runh.sh
cpp/: CMakeLists.txt  MyException.cpp  MyException.h  floats.cpp  int.cpp  lambda.cpp  memoryanalysis.cpp  mpi-boost1.cpp  mpi1.cpp  mpichild.cpp  mpiparent.cpp  parsefloats.cpp  run-gcc.sh  run.sh  run_c++11  sleep.h  test_c++11threads.cpp  test_function_pointers.cpp  test_functionalprogramming.cpp  test_functor.cpp  test_traits.cpp  test_traits2.cpp  test_traits3.cpp  test_uniqueptr.cpp  testboostthread.cpp  testcast.cpp  testenv.cpp  testexception.cpp  testfreetype.cpp  testgetenv.cc  testgoogletest.cpp  testjpeg.cpp  testjsoncpp.cpp  testkillthread.cpp  testlambda.cpp  testldlt.cpp  testmatrix.cpp  testmemoryanalysis.cpp  testmpi.cpp  testmpi_boostserialization.cpp  (+13 more)
cpp/from_tf/: philox_random.h
cpp/graph/: CMakeLists.txt  try_boost_graph_library.cpp
cpp/mpi/: mpi_pres.tex
cpp/mpi/example/: CMakeLists.txt  testmpi.cpp  testmpi2.cpp
cpp/mpi/example/utils/: stringhelper.cpp  stringhelper.h
cpp/mpi/example/utils/mpi/: mpi_bcast.cpp  mpi_bcast.h  mpi_helper.cpp  mpi_helper.h  mpi_reduce.cpp  mpi_reduce.h
cpp/mpiwrapper/: CMakeLists.txt  mpiwrapper.c  mpiwrapper.h  testwrapper.cpp
cpp/notes/: functors.md
cpp/staticinit/: build.sh  m1.cpp  m1.h  s1.cpp  s2.cpp  s2.ll  s3.cpp
cpp/testpch/: CMakeLists.txt  mymain.cpp  stdafx.h
cpp/testrpath/: main.cpp  run.sh
cpp/tf/: CMakeLists.txt  test_cuda_device_array.cpp  testphilox.cpp
cpp/tf/tf_files/: cuda_device_array.h  philox_random.h
cpp/tf_files/: README.md  philox_random.h  random_distributions.h
cpp/yaml/: CMakeLists.txt  test_yaml.cpp  test_yaml.yaml
cython/cmake2/: CMakeLists.txt  test_call.py  testcxxmodule.cpp  testcxxmodule.h  testpylib.c  testpylib.pyx  testpylib2.pxd  testpylibinc.pyx
cython/pysetupcalllib/: CMakeLists.txt  myclib.cpp  myclib.h
cython/pysetupcalllib/python/: setup.py  testpylib.cpp  testpylib.pyx
f77/: callffromc.c  callffromcpp.cpp  compile_fort77.sh  compile_g77.sh  hpfn2.f  hphello1.f  testblas.c
hughperkins-ci/: index.html
java/jnitest/: CMakeLists.txt  jnitest.cpp  jnitest.h  jnitest_c.c  jnitest_c.h  jnitest_c.i  jnitest_c_wrap.c  swiggenerate.sh  testmyfunc.cpp  testmyfunc_c.c
java/jnitest/swig/root/: JnitestC.java  JnitestCJNI.java  SomeStruct.java  StructWithArray.java
jupyter/: matplotlib.ipynb  tf_loadcheckpointmodel.ipynb
llvm/: build-testattribute.sh  buildtestreaddir.sh  createstructs.cpp  scanlibraries.py  testattribute.cpp  testreadir.cpp
llvm/linkgtest/: CMakeLists.txt  mytest.cpp
llvm/linkgtest/cmake/: get-llvm-libs.sh  get-llvm-link-config.sh
lua/: image.lua  logpurge.lua  write_file.lua
lua/stacktrace/: CMakeLists.txt  calllua.lua  main.cpp  teststack.cpp  teststack.lua
luacallcpp/: CMakeLists.txt  build.sh  call_foo.cpp  call_foo.lua
luatemplating/: CMakeLists.txt  run.lua  templater.lua  test.cpp  test1.cl  test_foo.cl  testloadstring.lua
maths/: baum_welch.ipynb  bayesian_linear_regression.ipynb  bias_variance_tradeoff.ipynb  dominated_convergence_theorem.ipynb  importance_sampling.ipynb  integral_substitutions.ipynb  integrate_cdf_part_part3.ipynb  integrate_cdf_pdf.ipynb  integrate_cdf_pdf_part2.ipynb  integration_by_parts.ipynb  kullback_liebler.ipynb  logistic_regression.ipynb  logs.ipynb  product_rule.ipynb  sarsa_updates.ipynb  variational_bayes.ipynb  viterbi.ipynb
matrixunroll/: CMakeLists.txt  Timer.h  convrolled.cpp  convunrolled.cpp  dim.h  results.txt  rolledprop.cpp  testclblas.cpp  testclblas2.cpp  unrollclblas.cpp  unrolling_cpu.cpp  unrolling_cpu.h
notes/: using_the_output_embedding_to_improve_language_models.ipynb
opencl/: CMakeLists.txt  clblas.h  compile_c.sh  fusedkernel.cl  runtestevents.sh  test_addrspace_notation.c  test_buffers.cpp  test_globalpointerstability.cpp  testcltimeout.cl  testcltimeout.cpp  testevents.cpp  testmapbuffer.cpp  teststride.cpp
opencl/aliasing/: CMakeLists.txt  testaliasing.cpp
opencl/apply2prot/: CMakeLists.txt  testapply2.cl  testapply2.cpp  testapply2t.cpp  testapply2tnot.cl  testapply2tnot.cpp
opencl/boostcompute/: CMakeLists.txt  build.sh  build1b.sh  test1.cpp  test1b.cpp
opencl/clblassetup/: CMakeLists.txt  clblassetupteardown.cpp  repeatgemm.cpp
opencl/coriander/eigen/: CMakeLists.txt  reduction_sum.cu  test_cuda_elementwise_abs.cu
opencl/gemmtest/: CMakeLists.txt  gemmtest.cpp  sgemm_test.cpp
opencl/hd5500bug/: corruptdisplay.cpp
opencl/libdnn/: CMakeLists.txt  test1.cpp
opencl/structarray/: CMakeLists.txt  run-teststructperf.sh  testfloat1d.cl  testfloat1d.cpp  testfloat1wrapper.cpp  testfloat4.cl  testfloat4.cpp  testfloat4wrapper.cpp  teststructperf.cl  teststructperf.cpp  teststructperf2.cpp  teststructperf2t.cpp  teststructperfnostruct.cl  teststructperfnostruct.cpp
papers/: axiomatic_attribution.ipynb  cgnichollas_reinforcement_learning.ipynb  challenges_in_data_to_document_generation.ipynb  cross_entropy_method_tutorial.ipynb  davidsilver_reinforcement_learning_lectures.ipynb  davidsilver_rl_lecture4.ipynb  davidsilver_rl_lecture5_model_free_control.ipynb  davidsilver_rl_lecture6_value_function_approximation.ipynb  (+9 more)
spirv/: CMakeLists.txt  cl-to-spirv.sh  cl_kernel1.cl  test_spir_cpp.cpp  useLLVMReader.cpp  useSpirvToolsBinaryParser.cpp
test_cpp_build/: CMakeCache.txt  CMakeLists.txt  clang-15.cmake  test.cpp  test.sh
(+234 files in other folders)
